src/Components/AnimalCard/index.css
.title-content {
    padding: 0 20px;
}

.courses-content {
    padding: 0 40px;
}

.card {
    width: 250px;
    position: relative;
    margin-right: 30px;
    margin-bottom: 30px;
    transition: margin-right 0.3s;
}

.card-title a {
    color: #333;
    text-decoration: none;
}

.card-body {
    height: 75px;
}

.card-body * {
    margin: 0;
}

.card-img-top {
    height: 200px;
    width: 100%;
    background-color: steelblue;
    position: relative;
}

.fill-image {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.vertical-dots {
    position: absolute;
    top: 10px;
    right: 10px;
}

